--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://angelazaff.github.io/whack-a-mole/",
   "name": "whack-a-mole",
   "version": "0.1.0",
   "private": true,
@@ -15,8 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
